# personal-finance-analytics

./: .env.sample  .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: keepalive.yml
data/: 2025_1_sysarmy.csv  autos.csv  sueldos.sample  vuelos.csv
experiments/: autos_experimental.txt
personal_finance_analytics/: __main__.py  expenses.ipynb  general_salaries.ipynb  goods_and_services.ipynb  it_salaries_analytics.ipynb  salary_analysis.ipynb  utils.py
personal_finance_analytics/api/: __init__.py  app.py
personal_finance_analytics/api/error_handling/: __init__.py  configurer.py  exceptions.py  handlers.py
personal_finance_analytics/api/routes/: __init__.py  available_funds.py  dependencies.py  healthcheck.py  salary_analytics.py
personal_finance_analytics/data/: autos.csv  sueldos.sample  vuelos.csv
personal_finance_analytics/data/gob_ar/: 2026_01_dist_personal_ingreso_x_deciles_trims.csv  2026_01_rem_bruta_asal_regs_sect_priv_men_pesos_base.csv  (+2 more)
personal_finance_analytics/domain/: __init__.py  entities.py  exceptions.py  expenses.py  finance_analyst.py  it_salaries.py  months.py  salaries.py
personal_finance_analytics/infrastructure/: __init__.py  expenses_data.py  salaries_data.py
personal_finance_analytics/notebooks/: expenses.ipynb  general_salaries.ipynb  goods_and_services.ipynb  it_salaries_analytics.ipynb  salary_analysis.ipynb  utils.py
personal_finance_analytics/utils/: __init__.py  exceptions.py  settings.py
sueldo_analytics/: analytics.ipynb  utils.py
tests/: conftest.py
tests/api/: conftest.py
(+11 files in other folders)
